Fix the footer on mobile

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -322,6 +322,8 @@ body {
   flex-direction: column;
   justify-content: start;
   align-items: left;
+
+  padding-bottom: 2rem;
 }
 
 .details__content__info {
@@ -345,8 +347,12 @@ body {
   width: 90%;
   padding-left: 5%;
   padding-right: 5%;
-  position: absolute;
-  bottom: 1rem;
+  position: fixed;
+  bottom: 0;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+
+  background-color: white;
 
   display: flex;
   flex-direction: row;
